--- a/templates/base.html
+++ b/templates/base.html
@@ -10,13 +10,14 @@
             rel="stylesheet"
             type="text/css"
         />
-        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+        <link rel="stylesheet" href="{{url_for('static',filename='dist/output.css')}}">
         <link
             href="https://cdn.jsdelivr.net/npm/daisyui@5/themes.css"
             rel="stylesheet"
             type="text/css"
         />
         <script src="https://unpkg.com/htmx.org@2.0.4" integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+" crossorigin="anonymous"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.8/dist/cdn.min.js"></script>
     </head>
     <body>
         <div class="min-h-screen flex flex-col">
